--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="txt_hint">Type Message</string>
 
 
-    <string name="app_name">Offline Route Builder</string>
+    <string name="app_name">Offline Route Builder & DTN</string>
 </resources>
